fixed z-index of debug-features panel

--- a/src/styles/App.less
+++ b/src/styles/App.less
@@ -125,6 +125,7 @@ fieldset {
 }
 
 .debug-features {
+  z-index: 1;
   width: 100vw;
   overflow: auto;
   box-sizing: border-box;
